--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -7,6 +7,16 @@
     android:background="@drawable/bg_color"
     tools:context=".mainModule.view.fragments.ChannelsFragment">
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,7 +29,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
