--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_color"
-    tools:context=".mainModule.view.fragments.ChannelsFragment">
+    tools:context=".ui.view.fragments.ChannelsFragment">
 
     <ProgressBar
         android:id="@+id/progress_bar"
