--- a/app/src/main/res/layout/fragment_play_high.xml
+++ b/app/src/main/res/layout/fragment_play_high.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_color"
-    tools:context=".mainModule.view.fragments.PlayHighFragment">
+    tools:context=".ui.view.fragments.PlayHighFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
